src/tests/variable-declarations/19.txt
variable-declarations/19.c:3:10: error: array size missing in 'y6'
     char (y6)[];
          ^
variable-declarations/19.c:9:10: error: array size missing in 'y'
     char *y[];
          ^
variable-declarations/19.c:12:10: error: array size missing in 'y4'
     char ((((*((y4[]))))));
          ^
variable-declarations/19.c:13:10: error: array size missing in 'y10'
     char *(*y10[]);
          ^
